# goferBot

./: .env.e2e  .env.example  .env.test  .gitignore  .npmrc  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONSTRAINTS.md  CONTEXT.md  PROGRESS.md  README.md  auto-imports.d.ts  biome.json  bump-version.cjs  components.d.ts  docker-compose.dev.yml  junit.xml  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.vitest.json  vite.config.ts  vitest.b10.config.ts  vitest.config.ts  vitest.e2e-api.config.ts  vitest.f16.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
services/knowledge-ai-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.knowledge.yml  pyproject.toml  ruff.toml
services/knowledge-ai-service/scripts/: dod_acceptance.py
services/knowledge-ai-service/src/knowledge_ai/: __init__.py  config.py  main.py  provider_require.py  schemas.py
services/knowledge-ai-service/src/knowledge_ai/api/: routes.py
services/knowledge-ai-service/src/knowledge_ai/auth/: __init__.py  service_token.py
services/knowledge-ai-service/src/knowledge_ai/generation/: __init__.py  context.py  generate.py
services/knowledge-ai-service/src/knowledge_ai/indexing/: __init__.py  chunker.py  embedder.py  indexer.py
services/knowledge-ai-service/src/knowledge_ai/infrastructure/: __init__.py  elasticsearch_store.py  (+1 more)
services/knowledge-ai-service/tests/: conftest.py  test_auth.py  test_chunker.py  test_config_security.py  test_parent.py  test_provider_require.py  test_redact.py  test_rrf.py  test_stream_strict.py  test_understanding.py
(+1372 files in other folders)
