[project]
name = "knowledge-ai"
version = "0.1.0"
description = "GoferBot Knowledge AI Service — indexing, hybrid retrieval, knowledge Q&A"
readme = "README.md"
authors = [
    { name = "GoferBot", email = "dev@goferbot.local" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "elasticsearch[async]>=8.15.0,<9",
    "python-multipart>=0.0.12",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
knowledge-ai = "knowledge_ai.main:run"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
